tests/baselines/reference/parserEnum4.errors.txt
parserEnum4.ts(2,9): error TS1132: Enum member expected.


==== parserEnum4.ts (1 errors) ====
        export enum SignatureFlags {
            ,
            ~
!!! error TS1132: Enum member expected.
        }